# kohi

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile.engine.windows.mak  Makefile.testbed.macos.mak  README.md  build-all.bat
assets/shaders/: Builtin.ObjectShader.frag.glsl  Builtin.ObjectShader.vert.glsl
cmake/: HandleVulkanDeps.cmake  ResourcesFunctions.cmake
engine/: CMakeLists.txt  build.bat  build.sh
engine/src/: defines.h  entry.h  game_types.h
engine/src/containers/: darray.c  darray.h
engine/src/core/: application.c  application.h  asserts.h  clock.h  event.c  event.h  input.c  input.h  kmemory.c  kmemory.h  kstring.h  logger.c  logger.h
engine/src/math/: kmath.h  math_types.h
engine/src/memory/: linear_allocator.h
engine/src/platform/: filesystem.h  platform.h  platform_linux.c  platform_macos.m  platform_win32.c
engine/src/renderer/: renderer_backend.c  renderer_backend.h  renderer_frontend.c  renderer_frontend.h  renderer_types.inl
engine/src/renderer/vulkan/: vulkan_backend.c  vulkan_backend.h  vulkan_buffer.h  vulkan_command_buffer.c  vulkan_command_buffer.h  vulkan_device.c  vulkan_device.h  vulkan_fence.c  vulkan_fence.h  vulkan_framebuffer.h  vulkan_image.c  vulkan_image.h  vulkan_pipeline.c  vulkan_pipeline.h  vulkan_platform.h  vulkan_renderpass.c  vulkan_renderpass.h  vulkan_shader_utils.h  vulkan_swapchain.c  vulkan_swapchain.h  vulkan_types.inl  vulkan_utils.c  vulkan_utils.h
engine/src/renderer/vulkan/shaders/: vulkan_object_shader.c  vulkan_object_shader.h
engine/src/resources/: resource_types.h
testbed/: CMakeLists.txt  build.sh
testbed/src/: entry.c  game.c  game.h  main.c
tests/: CMakeLists.txt
tests/src/: expect.h  test_manager.h
tests/src/memory/: linear_allocator_tests.h
